include/phy_engine/dll_api.h

    // Thread-local diagnostic string for the most recent failing API call.
    // Pointer remains valid until the next API call on the same thread.
    char const* phy_engine_last_error(void);
    void phy_engine_clear_error(void);
    void phy_engine_string_free(char* s);
    // PhysicsLab experiment handle (`phy_engine::phy_lab_wrapper::experiment`).
    void* pl_experiment_create(int type_value);
    void* pl_experiment_load_from_string(char const* sav_json, size_t sav_json_size);
    void* pl_experiment_load_from_file(char const* path, size_t path_size);
    void pl_experiment_destroy(void* experiment_ptr);
    char* pl_experiment_dump(void* experiment_ptr, int indent);
    int pl_experiment_save(void* experiment_ptr, char const* path, size_t path_size, int indent);
    char* pl_experiment_add_circuit_element(void* experiment_ptr,
                                           char const* model_id,
                                           size_t model_id_size,
                                           double x,
                                           double y,
                                           double z,
                                           uint8_t element_xyz_coords,
                                           uint8_t is_big_element,
                                           uint8_t participate_in_layout);
    int pl_experiment_connect(void* experiment_ptr,
                              char const* src_id,
                              size_t src_id_size,
                              int src_pin,
                              char const* dst_id,
                              size_t dst_id_size,
                              int dst_pin,
                              int color_value);
    int pl_experiment_clear_wires(void* experiment_ptr);
    int pl_experiment_set_xyz_precision(void* experiment_ptr, int decimals);
    int pl_experiment_set_element_xyz(void* experiment_ptr, uint8_t enabled, double origin_x, double origin_y, double origin_z);
    int pl_experiment_set_camera(void* experiment_ptr,
                                 double vision_center_x,
                                 double vision_center_y,
                                 double vision_center_z,
                                 double target_rotation_x,
                                 double target_rotation_y,
                                 double target_rotation_z);
    int pl_experiment_set_element_property_number(void* experiment_ptr,
                                                  char const* element_id,
                                                  size_t element_id_size,
                                                  char const* key,
                                                  size_t key_size,
                                                  double value);
    int pl_experiment_set_element_label(void* experiment_ptr,
                                        char const* element_id,
                                        size_t element_id_size,
                                        char const* label,
                                        size_t label_size);
    int pl_experiment_set_element_position(void* experiment_ptr,
                                           char const* element_id,
                                           size_t element_id_size,
                                           double x,
                                           double y,
                                           double z,
                                           uint8_t element_xyz_coords);
    int pl_experiment_merge(void* dst_experiment_ptr, void* src_experiment_ptr, double offset_x, double offset_y, double offset_z);
    // PhysicsLab -> PE simulation handle (`phy_engine::phy_lab_wrapper::pe::circuit`).
    void* pl_pe_circuit_build(void* experiment_ptr);
    void pl_pe_circuit_destroy(void* pe_circuit_ptr);
    size_t pl_pe_circuit_comp_size(void* pe_circuit_ptr);
    int pl_pe_circuit_set_analyze_type(void* pe_circuit_ptr, uint32_t analyze_type_value);
    int pl_pe_circuit_set_tr(void* pe_circuit_ptr, double t_step, double t_stop);
    int pl_pe_circuit_set_ac_omega(void* pe_circuit_ptr, double omega);
    int pl_pe_circuit_analyze(void* pe_circuit_ptr);
    int pl_pe_circuit_digital_clk(void* pe_circuit_ptr);
    int pl_pe_circuit_sync_inputs_from_pl(void* pe_circuit_ptr, void* experiment_ptr);
    int pl_pe_circuit_write_back_to_pl(void* pe_circuit_ptr, void* experiment_ptr);
    int pl_pe_circuit_write_back_to_pl_ex(void* pe_circuit_ptr,
                                          void* experiment_ptr,
                                          double logic_output_low,
                                          double logic_output_high,
                                          double logic_output_x,
                                          double logic_output_z);
    int pl_pe_circuit_sample_layout(void* pe_circuit_ptr,
                                    size_t* voltage_ord,
                                    size_t* current_ord,
                                    size_t* digital_ord);
    int pl_pe_circuit_sample_u8(void* pe_circuit_ptr,
                                double* voltage,
                                size_t* voltage_ord,
                                double* current,
                                size_t* current_ord,
                                uint8_t* digital,
                                size_t* digital_ord);
    // Like `pl_pe_circuit_sample_u8`, but preserves 4-state digital values:
    // 0=L, 1=H, 2=X, 3=Z.
    int pl_pe_circuit_sample_digital_state_u8(void* pe_circuit_ptr,
                                              double* voltage,
                                              size_t* voltage_ord,
                                              double* current,
                                              size_t* current_ord,
                                              uint8_t* digital,
                                              size_t* digital_ord);
    // PE -> PhysicsLab export.
    void* pe_to_pl_convert(void* circuit_ptr,
                           double fixed_x,
                           double fixed_y,
                           double fixed_z,
                           uint8_t element_xyz_coords,
                           uint8_t keep_pl_macros,
                           uint8_t include_linear,
                           uint8_t include_ground,
                           uint8_t generate_wires,
                           uint8_t keep_unknown_as_placeholders,
                           uint8_t drop_dangling_logic_inputs);
    // PhysicsLab auto-layout.
    int pl_experiment_auto_layout(void* experiment_ptr,
                                  double corner0_x,
                                  double corner0_y,
                                  double corner0_z,
                                  double corner1_x,
                                  double corner1_y,
                                  double corner1_z,
                                  double z_fixed,
                                  int backend_value,
                                  int mode_value,
                                  double step_x,
                                  double step_y,
                                  double margin_x,
                                  double margin_y,
                                  size_t* out_grid_w,
                                  size_t* out_grid_h,
                                  size_t* out_fixed_obstacles,
                                  size_t* out_placed,
                                  size_t* out_skipped);