python/phy_engine/_ffi.py


    lib.pl_experiment_create.argtypes = [ct.c_int]
    lib.pl_experiment_create.restype = ct.c_void_p
    lib.pl_experiment_load_from_string.argtypes = [ct.c_char_p, ct.c_size_t]
    lib.pl_experiment_load_from_string.restype = ct.c_void_p
    lib.pl_experiment_load_from_file.argtypes = [ct.c_char_p, ct.c_size_t]
    lib.pl_experiment_load_from_file.restype = ct.c_void_p
    lib.pl_experiment_destroy.argtypes = [ct.c_void_p]
    lib.pl_experiment_destroy.restype = None
    lib.pl_experiment_dump.argtypes = [ct.c_void_p, ct.c_int]
    lib.pl_experiment_dump.restype = ct.c_void_p
    lib.pl_experiment_save.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_size_t, ct.c_int]
    lib.pl_experiment_save.restype = ct.c_int
    lib.pl_experiment_add_circuit_element.argtypes = [
        ct.c_void_p,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
    ]
    lib.pl_experiment_add_circuit_element.restype = ct.c_void_p
    lib.pl_experiment_connect.argtypes = [
        ct.c_void_p,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_int,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_int,
        ct.c_int,
    ]
    lib.pl_experiment_connect.restype = ct.c_int
    lib.pl_experiment_clear_wires.argtypes = [ct.c_void_p]
    lib.pl_experiment_clear_wires.restype = ct.c_int
    lib.pl_experiment_set_xyz_precision.argtypes = [ct.c_void_p, ct.c_int]
    lib.pl_experiment_set_xyz_precision.restype = ct.c_int
    lib.pl_experiment_set_element_xyz.argtypes = [
        ct.c_void_p,
        ct.c_uint8,
        ct.c_double,
        ct.c_double,
        ct.c_double,
    ]
    lib.pl_experiment_set_element_xyz.restype = ct.c_int
    lib.pl_experiment_set_camera.argtypes = [
        ct.c_void_p,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
    ]
    lib.pl_experiment_set_camera.restype = ct.c_int
    lib.pl_experiment_set_element_property_number.argtypes = [
        ct.c_void_p,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_double,
    ]
    lib.pl_experiment_set_element_property_number.restype = ct.c_int
    lib.pl_experiment_set_element_label.argtypes = [
        ct.c_void_p,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_char_p,
        ct.c_size_t,
    ]
    lib.pl_experiment_set_element_label.restype = ct.c_int
    lib.pl_experiment_set_element_position.argtypes = [
        ct.c_void_p,
        ct.c_char_p,
        ct.c_size_t,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_uint8,
    ]
    lib.pl_experiment_set_element_position.restype = ct.c_int
    lib.pl_experiment_merge.argtypes = [
        ct.c_void_p,
        ct.c_void_p,
        ct.c_double,
        ct.c_double,
        ct.c_double,
    ]
    lib.pl_experiment_merge.restype = ct.c_int

    lib.pl_pe_circuit_build.argtypes = [ct.c_void_p]
    lib.pl_pe_circuit_build.restype = ct.c_void_p
    lib.pl_pe_circuit_destroy.argtypes = [ct.c_void_p]
    lib.pl_pe_circuit_destroy.restype = None
    lib.pl_pe_circuit_comp_size.argtypes = [ct.c_void_p]
    lib.pl_pe_circuit_comp_size.restype = ct.c_size_t
    lib.pl_pe_circuit_set_analyze_type.argtypes = [ct.c_void_p, ct.c_uint32]
    lib.pl_pe_circuit_set_analyze_type.restype = ct.c_int
    lib.pl_pe_circuit_set_tr.argtypes = [ct.c_void_p, ct.c_double, ct.c_double]
    lib.pl_pe_circuit_set_tr.restype = ct.c_int
    lib.pl_pe_circuit_set_ac_omega.argtypes = [ct.c_void_p, ct.c_double]
    lib.pl_pe_circuit_set_ac_omega.restype = ct.c_int
    lib.pl_pe_circuit_analyze.argtypes = [ct.c_void_p]
    lib.pl_pe_circuit_analyze.restype = ct.c_int
    lib.pl_pe_circuit_digital_clk.argtypes = [ct.c_void_p]
    lib.pl_pe_circuit_digital_clk.restype = ct.c_int
    lib.pl_pe_circuit_sync_inputs_from_pl.argtypes = [ct.c_void_p, ct.c_void_p]
    lib.pl_pe_circuit_sync_inputs_from_pl.restype = ct.c_int
    lib.pl_pe_circuit_write_back_to_pl.argtypes = [ct.c_void_p, ct.c_void_p]
    lib.pl_pe_circuit_write_back_to_pl.restype = ct.c_int
    lib.pl_pe_circuit_write_back_to_pl_ex.argtypes = [
        ct.c_void_p,
        ct.c_void_p,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
    ]
    lib.pl_pe_circuit_write_back_to_pl_ex.restype = ct.c_int
    lib.pl_pe_circuit_sample_layout.argtypes = [ct.c_void_p, c_size_p, c_size_p, c_size_p]
    lib.pl_pe_circuit_sample_layout.restype = ct.c_int
    lib.pl_pe_circuit_sample_u8.argtypes = [
        ct.c_void_p,
        c_double_p,
        c_size_p,
        c_double_p,
        c_size_p,
        c_u8_p,
        c_size_p,
    ]
    lib.pl_pe_circuit_sample_u8.restype = ct.c_int
    lib.pl_pe_circuit_sample_digital_state_u8.argtypes = [
        ct.c_void_p,
        c_double_p,
        c_size_p,
        c_double_p,
        c_size_p,
        c_u8_p,
        c_size_p,
    ]
    lib.pl_pe_circuit_sample_digital_state_u8.restype = ct.c_int

    lib.pe_to_pl_convert.argtypes = [
        ct.c_void_p,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
        ct.c_uint8,
    ]
    lib.pe_to_pl_convert.restype = ct.c_void_p

    lib.pl_experiment_auto_layout.argtypes = [
        ct.c_void_p,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_int,
        ct.c_int,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        ct.c_double,
        c_size_p,
        c_size_p,
        c_size_p,
        c_size_p,
        c_size_p,
    ]
    lib.pl_experiment_auto_layout.restype = ct.c_int

    return lib


def load_library(path: str | os.PathLike[str] | None = None) -> ct.CDLL:
    global _LIB
    with _LOCK:
        if path is None and _LIB is not None:
            return _LIB

        candidates: list[str] = []
        if path is not None:
            candidates.append(str(Path(path).expanduser()))
        else:
            candidates.extend(str(candidate) for candidate in _candidate_library_paths() if candidate.exists())
            found = find_library("phyengine")
            if found:
                candidates.append(found)

        last_exc: Exception | None = None
        for candidate in candidates:
            try:
                lib = _configure_library(ct.CDLL(candidate))
                if path is None:
                    _LIB = lib
                return lib
            except OSError as exc:
                last_exc = exc

        searched = "\n".join(candidates) if candidates else "  <none>"
        raise PhyEngineError(f"Unable to load phyengine shared library.\nSearched:\n{searched}") from last_exc


def last_error(lib: ct.CDLL | None = None) -> str:
    active = load_library() if lib is None else lib
    raw = active.phy_engine_last_error()
    return raw.decode("utf-8", errors="replace") if raw else ""


def clear_error(lib: ct.CDLL | None = None) -> None:
    active = load_library() if lib is None else lib
    active.phy_engine_clear_error()


def raise_last_error(prefix: str, lib: ct.CDLL | None = None) -> None:
    message = last_error(lib)
    if message:
        raise PhyEngineError(f"{prefix}: {message}")
    raise PhyEngineError(prefix)


def check_rc(rc: int, func: str, lib: ct.CDLL | None = None) -> None:
    if rc != 0:
        raise_last_error(f"{func} failed with rc={rc}", lib)


def take_owned_c_string(ptr: int | ct.c_void_p | None, lib: ct.CDLL | None = None) -> str:
    if not ptr:
        return ""
    active = load_library() if lib is None else lib
    raw_ptr = int(ptr)
    try:
        return ct.string_at(raw_ptr).decode("utf-8", errors="replace")
    finally:
        active.phy_engine_string_free(ct.c_void_p(raw_ptr))


__all__ = [
    "PhyEngineError",
    "check_rc",
    "clear_error",
    "last_error",
    "load_library",
    "raise_last_error",
    "take_owned_c_string",
]
